# matrix

./: CMakeLists.txt  s21_matrix_oop.cpp  s21_matrix_oop.h
src/: Makefile  s21_matrix_oop.cpp  s21_matrix_oop.h  s21_matrix_oop.сpp
src/include/: s21_matrix_oop.h  test.h
src/tests/: test.cpp  test.h
